# work_3

./: CMakeLists.txt  README.md
src/: main_hub.cpp  main_server.cpp
src/communication/: cannister.cpp  cannister.h  drone_hub_server.cpp  drone_hub_server.h  drone_manager.cpp  drone_manager.h  inputs.yaml  mavlink_bridge.cpp  mavlink_bridge.h  rtp.cpp  rtp.h  test_mav  test_mavlink_bridge.cpp  track_config.json  udp_handler.cpp  udp_handler.h
src/core/: mission_controller.cpp  state_machine.cpp  state_machine.h  timing_manager.cpp  timing_manager.h
src/encryption/: aes_handler.cpp  aes_handler.h
src/messages/: json_parser.cpp  json_parser.h  message_types.h
src/testing/: virtual_server.cpp  virtual_server.h
